[gd_scene load_steps=38 format=3 uid="uid://bry8mxiawyyc8"]

[ext_resource type="Script" path="res://assets/Scripts/BunController.gd" id="1_rrqok"]
[ext_resource type="PackedScene" uid="uid://drwdy1k04ag05" path="res://assets/Camera/camroot.tscn" id="2_pc00b"]
[ext_resource type="PackedScene" uid="uid://cr7x0cw7d5o6t" path="res://assets/Camera/camRightTank.tscn" id="3_nbdst"]
[ext_resource type="PackedScene" uid="uid://d2j4gfwnbbl2t" path="res://assets/Scenes/Level/Cave/keys.tscn" id="5_mkqfp"]
[ext_resource type="AudioStream" uid="uid://co8f7x21lsryd" path="res://assets/SFX/Hurt.wav" id="6_a27bp"]
[ext_resource type="AudioStream" uid="uid://8ui4abyi60y6" path="res://assets/SFX/Oof.wav" id="7_owbsn"]
[ext_resource type="AudioStream" uid="uid://bw0q3ylia4tir" path="res://assets/SFX/Throw_Woosh.wav" id="9_422q5"]
[ext_resource type="AudioStream" uid="uid://bp6w72mi3xouk" path="res://assets/SFX/Explosion.wav" id="10_8yq4r"]
[ext_resource type="PackedScene" uid="uid://cj437v53xp0ip" path="res://assets/Characters/chembun cloth model/chemcloth.tscn" id="11_gc04b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xaddr"]
radius = 0.434581

[sub_resource type="AnimationNodeAnimation" id="20"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="21"]
animation = &"jump_start"

[sub_resource type="AnimationNodeAnimation" id="23"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="24"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j1n7w"]
animation = &"double jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aj2b6"]
animation = &"jump_fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qvdw1"]
animation = &"knockback"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xcvv4"]
animation = &"kungfu-mixamo"

[sub_resource type="AnimationNodeStateMachineTransition" id="28"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"IsRunning"

[sub_resource type="AnimationNodeStateMachineTransition" id="31"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"IsNotRunning"

[sub_resource type="AnimationNodeStateMachineTransition" id="42"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"IsJumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="44"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"IsInAir"

[sub_resource type="AnimationNodeStateMachineTransition" id="27"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"IsWalking"

[sub_resource type="AnimationNodeStateMachineTransition" id="32"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"IsNotWalking"

[sub_resource type="AnimationNodeStateMachineTransition" id="45"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"IsInAir"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u47nw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mt7me"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_om658"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hokg7"]
advance_mode = 2
advance_condition = &"IsFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yay8v"]
advance_mode = 2
advance_condition = &"IsDoubleJumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wk22o"]
switch_mode = 2
advance_mode = 2
advance_condition = &"IsFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m8ts8"]
advance_mode = 2
advance_condition = &"IsOnFloor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w6jfn"]
advance_mode = 2
advance_condition = &"IsFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xgihh"]
advance_mode = 2
advance_condition = &"IsDoubleJumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rddng"]
advance_mode = 2
advance_condition = &"IsOnFloor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d26si"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_kmv6c"]
states/End/position = Vector2(869.333, 169.333)
states/Idle/node = SubResource("20")
states/Idle/position = Vector2(375, 211.519)
states/Jump/node = SubResource("21")
states/Jump/position = Vector2(566, 326.667)
states/Run/node = SubResource("23")
states/Run/position = Vector2(771.667, 211.659)
states/Start/position = Vector2(255, 213)
states/Walk/node = SubResource("24")
states/Walk/position = Vector2(566, 213)
"states/double jump/node" = SubResource("AnimationNodeAnimation_j1n7w")
"states/double jump/position" = Vector2(675, 430.628)
states/jump_fall/node = SubResource("AnimationNodeAnimation_aj2b6")
states/jump_fall/position = Vector2(449.997, 430.628)
states/knockback/node = SubResource("AnimationNodeAnimation_qvdw1")
states/knockback/position = Vector2(321.997, 295.087)
states/kungfu-mixamo/node = SubResource("AnimationNodeAnimation_xcvv4")
states/kungfu-mixamo/position = Vector2(375, 116.295)
transitions = ["Walk", "Run", SubResource("28"), "Run", "Walk", SubResource("31"), "Walk", "Jump", SubResource("42"), "Run", "Jump", SubResource("44"), "Idle", "Walk", SubResource("27"), "Walk", "Idle", SubResource("32"), "Idle", "Jump", SubResource("45"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_u47nw"), "Idle", "kungfu-mixamo", SubResource("AnimationNodeStateMachineTransition_mt7me"), "kungfu-mixamo", "Idle", SubResource("AnimationNodeStateMachineTransition_om658"), "Jump", "jump_fall", SubResource("AnimationNodeStateMachineTransition_hokg7"), "Jump", "double jump", SubResource("AnimationNodeStateMachineTransition_yay8v"), "double jump", "jump_fall", SubResource("AnimationNodeStateMachineTransition_wk22o"), "jump_fall", "Walk", SubResource("AnimationNodeStateMachineTransition_m8ts8"), "Walk", "jump_fall", SubResource("AnimationNodeStateMachineTransition_w6jfn"), "jump_fall", "double jump", SubResource("AnimationNodeStateMachineTransition_xgihh"), "double jump", "Walk", SubResource("AnimationNodeStateMachineTransition_rddng"), "knockback", "Idle", SubResource("AnimationNodeStateMachineTransition_d26si")]
graph_offset = Vector2(-239.634, 172.456)

[node name="ChemBun" type="CharacterBody3D"]
script = ExtResource("1_rrqok")
PlayerCharacterMesh = NodePath("chemcloth")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.0492648)
shape = SubResource("CapsuleShape3D_xaddr")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../chemcloth")
tree_root = SubResource("AnimationNodeStateMachine_kmv6c")
anim_player = NodePath("../chemcloth/AnimationPlayer")
parameters/conditions/IsDoubleJumping = false
parameters/conditions/IsFalling = false
parameters/conditions/IsInAir = false
parameters/conditions/IsJumping = false
parameters/conditions/IsNotRunning = false
parameters/conditions/IsNotWalking = false
parameters/conditions/IsOnFloor = false
parameters/conditions/IsRunning = false
parameters/conditions/IsWalking = false

[node name="Camroot" parent="." instance=ExtResource("2_pc00b")]

[node name="CamRightTank" parent="." instance=ExtResource("3_nbdst")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DoubleJumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="chemcloth" parent="." instance=ExtResource("11_gc04b")]

[node name="Armature" parent="chemcloth" index="0"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Skeleton3D" parent="chemcloth/Armature" index="0"]
bones/0/position = Vector3(1.2861e-08, 0.717177, 0.180482)
bones/0/rotation = Quaternion(0.12876, 1.18217e-07, 1.53493e-08, 0.991676)
bones/1/rotation = Quaternion(-0.0789886, -0.0317583, -0.0185337, 0.996197)
bones/2/rotation = Quaternion(-0.138138, 0.0950433, 0.0264658, 0.985487)
bones/3/position = Vector3(-0.458356, 0.55703, -0.16532)
bones/3/rotation = Quaternion(0.0091437, -0.417449, 0.849143, 0.323432)
bones/4/rotation = Quaternion(0.485086, 0.267649, 0.0867732, 0.827965)
bones/5/rotation = Quaternion(-5.26072e-09, 2.30853e-08, 0.0379971, 0.999278)
bones/6/position = Vector3(0.458356, 0.553508, -0.166635)
bones/6/rotation = Quaternion(0.0437506, 0.212684, -0.925783, 0.309479)
bones/7/rotation = Quaternion(0.494932, 0.174816, 0.066393, 0.848571)
bones/8/rotation = Quaternion(-6.39019e-09, -2.31512e-08, -0.0379971, 0.999278)
bones/9/position = Vector3(-0.461072, 0.143845, -0.116606)
bones/9/rotation = Quaternion(-0.0223623, 0.126803, 0.976606, 0.172226)
bones/10/rotation = Quaternion(0.421472, 0.27548, -0.126634, 0.854656)
bones/11/position = Vector3(0.4602, 0.138747, -0.107922)
bones/11/rotation = Quaternion(0.0586383, 0.314689, 0.928551, -0.187953)
bones/12/rotation = Quaternion(0.287899, -0.0030426, -0.10355, 0.952041)
bones/13/position = Vector3(0, -0.655099, 0)
bones/14/position = Vector3(0, -0.655099, 0)
bones/14/rotation = Quaternion(-2.98023e-08, 1.19209e-07, -2.11758e-22, 1)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="chemcloth/Armature/Skeleton3D" index="2"]
transform = Transform3D(1, -3.55271e-15, 2.38419e-07, 6.08863e-08, 0.966842, -0.255376, -2.30513e-07, 0.255376, 0.966842, 1.2861e-08, 0.717177, 0.180482)
bone_name = "Spine2"
bone_idx = 0

[node name="Keys" parent="chemcloth/Armature/Skeleton3D/BoneAttachment3D" instance=ExtResource("5_mkqfp")]
transform = Transform3D(-0.270082, 0.358522, 7.15591e-05, -0.346621, -0.261139, 0.114642, 0.0916089, 0.0689243, 0.433981, -2.8811, 3.22384, -1.26945)
visible = false

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_a27bp")
bus = &"sfx"

[node name="Oof" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_owbsn")
bus = &"sfx"

[node name="Throwing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_422q5")
bus = &"sfx"

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8yq4r")
bus = &"sfx"

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="RegenTimer" to="." method="regen"]
[connection signal="timeout" from="KnockbackTimer" to="." method="knockback_exit"]
[connection signal="timeout" from="DoubleJumpTimer" to="." method="_on_double_jump_timer_timeout"]

[editable path="chemcloth"]
